[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Advent of Code 2022 https://adventofcode.com/"
authors = ["Stefano Piazza <to.stefano.piazza@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
pydantic = "^1.10.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
pylint = "^2.15.7"
mypy = "^0.991"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
